@startuml
!theme blueprint
abstract AbstractGame {
  Unit[] respawnQueue
  Battlefield map
  update()
}
class Game {
  Unit[] respawnQueue
  Battlefield map
  update()
}
class Unit {
  GenericBot defaultBot
  MoveBot moveBot
  ActionBot actionBot
  SeeingBot seeingBot
  int posX
  int posY
  int shotsRemaining
  move(x,y)
  fire(x,y)
  look(x,y)
}
class Grid {
  Unit? occupyingUnit
  operator>>(grid1, grid2)
}
class Battlefield
{
  vector<vector<Grid>> map
  Optional[Grid] getGrid(x, y)
}
class GenericBot {
  move(x,y)
  fire(x,y)
  look(x,y)
}
abstract MoveBot {
  moveSpecial(x,y)
}
abstract ActionBot{
  fireSpecial(x,y)
}
abstract SeeingBot{
  lookSpecial(x,y)
}
class JumpBot {
  moveSpecial(x,y)
}
class StealthBot {
  moveSpecial(x,y)
}
class ThirtyShotBot{
  fireSpecial(x,y)
}
class LongShotBot{
  fireSpecial(x,y)
}
class SemiAutoBot{
  fireSprecial(x,y)
}
class TrackerBot{
  lookSpecial(x,y)
}
class MapVisionBot{
  lookSpecial(x,y)
}

AbstractGame <|.. Game
Game o-- Unit
Unit *-- AbstractGame
Game *-- Battlefield
Battlefield *-- Grid
Grid o-- Unit

GenericBot <|-- MoveBot
GenericBot <|-- ActionBot
GenericBot <|-- SeeingBot

MoveBot <|.. JumpBot
MoveBot <|.. StealthBot

ActionBot <|.. ThirtyShotBot
ActionBot <|.. LongShotBot
ActionBot <|.. SemiAutoBot

SeeingBot <|.. TrackerBot
SeeingBot <|.. MapVisionBot

Unit *-- GenericBot
Unit o-- JumpBot
Unit o-- StealthBot
Unit o-- ThirtyShotBot
Unit o-- SemiAutoBot
Unit o-- TrackerBot
Unit o-- MapVisionBot
@enduml